docs: fix layout overflow (#1212)

--- a/apps/docs/src/app/layout.module.scss
+++ b/apps/docs/src/app/layout.module.scss
@@ -50,7 +50,7 @@
 
 .mainNavigation {
   padding-inline: var(--size-px--l);
-  width: 270px;
+  width: 285px;
   flex-shrink: 0;
 }
 
@@ -69,7 +69,7 @@
   flex-direction: column;
   row-gap: var(--size-px--l);
   flex-grow: 1;
-  max-width: 100%;
+  min-width: 0;
 }
 
 .tabContent {
@@ -107,12 +107,12 @@
   }
 
   .header {
-    padding: var(--size-px--xs) var(--size-px--s) var(--size-px--m);
+    padding: var(--size-px--m);
     row-gap: var(--size-rem--s);
   }
 
   .center {
-    padding-inline: var(--size-px--s);
+    padding-inline: var(--size-px--m);
   }
 }
 
